<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.noear</groupId>
    <artifactId>solon_java</artifactId>
    <version>dev</version>
    <packaging>pom</packaging>

    <name>_root</name>
    <description>Java project for solon</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
    </properties>

    <modules>
        <module>solon-parent</module>

        <module>__release/nami-bundle</module>
        <module>__release/socketd-bundle</module>

        <module>__release/solon-base-bundle</module>
        <module>__release/solon-boot-bundle</module>
        <module>__release/solon-extend-bundle</module>
        <module>__release/solon-plugin-bundle</module>
        <module>__release/solon-plugin2-bundle</module>
        <module>__release/solon-plugin-cloud-bundle</module>
        <module>__release/solon-plugin-cloud2-bundle</module>
        <module>__release/solon-render-bundle</module>

        <module>__test</module>

        <module>__hatch</module>
    </modules>
</project>